# pokedex-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: app.yml
configs/: config.py
src/: conftest.py
src/app/fastapi/: main.py
src/app/fastapi/controllers/: FindPokemonController.py  ListPokemonController.py  ListXMLPokemonController.py
src/app/fastapi/interfaces/: fastapi_controller_interface.py
src/app/fastapi/presenters/: find_pokemon_presenter.py  find_pokemon_presenter_test.py  list_pokemons_presenter.py  list_pokemons_presenter_test.py  list_xml_pokemons_presenter.py  list_xml_pokemons_presenter_test.py
src/app/fastapi/routes/: find_pokemon_router.py  list_pokemons_router.py
src/domain/entities/: pokemon_test.py
src/infra/cache/: redis_cache.py
src/infra/clients/: httpx_client.py
src/infra/repositories/: pokemon_pokeapi_repository.py  pokemon_pokeapi_repository_test.py
src/interactor/dtos/: find_pokemon_dtos.py  find_pokemon_dtos_test.py  list_pokemons_dtos.py  list_pokemons_dtos_test.py
src/interactor/interfaces/: cache_client.py
src/interactor/interfaces/presenters/: find_pokemon_presenter.py  list_pokemons_presenter.py  list_xml_pokemons_presenter.py
src/interactor/interfaces/repositories/: pokemon_repository.py
src/interactor/use_cases/: find_pokemon.py  find_pokemon_test.py  list_pokemons.py  list_pokemons_test.py
