[tool.poetry]
name = "pokedex-api"
version = "0.1.0"
description = ""
authors = ["Bruno Cerciliar <brunocerciliar@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
hishel = "^0.0.27"
pytest-asyncio = "^0.23.7"
aioredis = "^2.0.1"
redis = "^5.0.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

